// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ImageModal component renders as expected with parameters (as closed) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageModal
    handleNoButtonClick={[Function]}
    handleYesButtonClick={[Function]}
    isOpen={false}
    setEditorRef={[Function]}
    title="Title"
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": <n
        accept="image/jpeg, image/png"
        className="dropzone"
        disableClick={false}
        disablePreview={false}
        disabled={false}
        getDataTransferItems={[Function]}
        inputProps={Object {}}
        maxSize={2097152}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        onDropRejected={[Function]}
        preventDropOnDocument={true}
>
        <p>
                
                .
                 
                
        </p>
</n>,
      "className": "NewFileModal",
      "handleNoButtonClick": [Function],
      "handleYesButtonClick": [Function],
      "isOpen": false,
      "setEditorRef": [Function],
      "title": "Title",
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accept": "image/jpeg, image/png",
        "children": <p>
          
          .
           
          
</p>,
        "className": "dropzone",
        "disableClick": false,
        "disablePreview": false,
        "disabled": false,
        "getDataTransferItems": [Function],
        "inputProps": Object {},
        "maxSize": 2097152,
        "minSize": 0,
        "multiple": true,
        "onDrop": [Function],
        "onDropRejected": [Function],
        "preventDropOnDocument": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            ".",
            " ",
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          "",
          ".",
          " ",
          "",
        ],
        "type": "p",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": <n
          accept="image/jpeg, image/png"
          className="dropzone"
          disableClick={false}
          disablePreview={false}
          disabled={false}
          getDataTransferItems={[Function]}
          inputProps={Object {}}
          maxSize={2097152}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          onDropRejected={[Function]}
          preventDropOnDocument={true}
>
          <p>
                    
                    .
                     
                    
          </p>
</n>,
        "className": "NewFileModal",
        "handleNoButtonClick": [Function],
        "handleYesButtonClick": [Function],
        "isOpen": false,
        "setEditorRef": [Function],
        "title": "Title",
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accept": "image/jpeg, image/png",
          "children": <p>
            
            .
             
            
</p>,
          "className": "dropzone",
          "disableClick": false,
          "disablePreview": false,
          "disabled": false,
          "getDataTransferItems": [Function],
          "inputProps": Object {},
          "maxSize": 2097152,
          "minSize": 0,
          "multiple": true,
          "onDrop": [Function],
          "onDropRejected": [Function],
          "preventDropOnDocument": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              ".",
              " ",
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            "",
            ".",
            " ",
            "",
          ],
          "type": "p",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing ImageModal component renders as expected with parameters (as open) 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageModal
    handleNoButtonClick={[Function]}
    handleYesButtonClick={[Function]}
    isOpen={true}
    setEditorRef={[Function]}
    title="Title"
    toggle={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": <n
        accept="image/jpeg, image/png"
        className="dropzone"
        disableClick={false}
        disablePreview={false}
        disabled={false}
        getDataTransferItems={[Function]}
        inputProps={Object {}}
        maxSize={2097152}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        onDropRejected={[Function]}
        preventDropOnDocument={true}
>
        <p>
                
                .
                 
                
        </p>
</n>,
      "className": "NewFileModal",
      "handleNoButtonClick": [Function],
      "handleYesButtonClick": [Function],
      "isOpen": true,
      "setEditorRef": [Function],
      "title": "Title",
      "toggle": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accept": "image/jpeg, image/png",
        "children": <p>
          
          .
           
          
</p>,
        "className": "dropzone",
        "disableClick": false,
        "disablePreview": false,
        "disabled": false,
        "getDataTransferItems": [Function],
        "inputProps": Object {},
        "maxSize": 2097152,
        "minSize": 0,
        "multiple": true,
        "onDrop": [Function],
        "onDropRejected": [Function],
        "preventDropOnDocument": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            ".",
            " ",
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          "",
          ".",
          " ",
          "",
        ],
        "type": "p",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": <n
          accept="image/jpeg, image/png"
          className="dropzone"
          disableClick={false}
          disablePreview={false}
          disabled={false}
          getDataTransferItems={[Function]}
          inputProps={Object {}}
          maxSize={2097152}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          onDropRejected={[Function]}
          preventDropOnDocument={true}
>
          <p>
                    
                    .
                     
                    
          </p>
</n>,
        "className": "NewFileModal",
        "handleNoButtonClick": [Function],
        "handleYesButtonClick": [Function],
        "isOpen": true,
        "setEditorRef": [Function],
        "title": "Title",
        "toggle": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accept": "image/jpeg, image/png",
          "children": <p>
            
            .
             
            
</p>,
          "className": "dropzone",
          "disableClick": false,
          "disablePreview": false,
          "disabled": false,
          "getDataTransferItems": [Function],
          "inputProps": Object {},
          "maxSize": 2097152,
          "minSize": 0,
          "multiple": true,
          "onDrop": [Function],
          "onDropRejected": [Function],
          "preventDropOnDocument": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              ".",
              " ",
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            "",
            ".",
            " ",
            "",
          ],
          "type": "p",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Testing ImageModal component renders as expected without parameters 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageModal />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ModalFooterContent": [Function],
      "children": <n
        accept="image/jpeg, image/png"
        className="dropzone"
        disableClick={false}
        disablePreview={false}
        disabled={false}
        getDataTransferItems={[Function]}
        inputProps={Object {}}
        maxSize={2097152}
        minSize={0}
        multiple={true}
        onDrop={[Function]}
        onDropRejected={[Function]}
        preventDropOnDocument={true}
>
        <p>
                
                .
                 
                
        </p>
</n>,
      "className": "NewFileModal",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "accept": "image/jpeg, image/png",
        "children": <p>
          
          .
           
          
</p>,
        "className": "dropzone",
        "disableClick": false,
        "disablePreview": false,
        "disabled": false,
        "getDataTransferItems": [Function],
        "inputProps": Object {},
        "maxSize": 2097152,
        "minSize": 0,
        "multiple": true,
        "onDrop": [Function],
        "onDropRejected": [Function],
        "preventDropOnDocument": true,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "",
            ".",
            " ",
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          "",
          ".",
          " ",
          "",
        ],
        "type": "p",
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ModalFooterContent": [Function],
        "children": <n
          accept="image/jpeg, image/png"
          className="dropzone"
          disableClick={false}
          disablePreview={false}
          disabled={false}
          getDataTransferItems={[Function]}
          inputProps={Object {}}
          maxSize={2097152}
          minSize={0}
          multiple={true}
          onDrop={[Function]}
          onDropRejected={[Function]}
          preventDropOnDocument={true}
>
          <p>
                    
                    .
                     
                    
          </p>
</n>,
        "className": "NewFileModal",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accept": "image/jpeg, image/png",
          "children": <p>
            
            .
             
            
</p>,
          "className": "dropzone",
          "disableClick": false,
          "disablePreview": false,
          "disabled": false,
          "getDataTransferItems": [Function],
          "inputProps": Object {},
          "maxSize": 2097152,
          "minSize": 0,
          "multiple": true,
          "onDrop": [Function],
          "onDropRejected": [Function],
          "preventDropOnDocument": true,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "",
              ".",
              " ",
              "",
            ],
          },
          "ref": null,
          "rendered": Array [
            "",
            ".",
            " ",
            "",
          ],
          "type": "p",
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Array [],
  Symbol(enzyme.__childContext__): null,
}
`;
